--- a/calculator.html
+++ b/calculator.html
@@ -11,7 +11,13 @@ var num = document.getElementById("n1");
 num.value = Math.pow(num.value, 3);
 
 }
+function seno_de_un_numero() {
 
+var num = document.getElementById("n1");
+
+num.value = Math.sin(num.value);
+
+}
 </script>
 
 </head>
@@ -23,6 +29,7 @@ Number:
 <input type="text" id="n1"><p>
 
 <button onclick="cube()"> x^3 </button>
+<button onclick="seno_de_un_numero()"> sin(x) </button>
 
 </body>
 
